<resources>
    <string name="app_name">WanAndroid</string>

    <!--iconfont字体图标-->
    <string name="tab_left">&#xe73e; </string> <!--左对齐-->
    <string name="tab_right">&#xe629; </string> <!--右对齐-->
    <string name="ic_hot">&#xe7de; </string> <!--火-->
    <string name="ic_return">&#xe643; </string> <!--返回-->
    <string name="ic_share">&#xe624; </string> <!--分享-->
    <string name="ic_search">&#xe7a8; </string> <!--搜索-->
    <string name="ic_collect_nor">&#xe621; </string> <!--未收藏-->
    <string name="ic_collect_sel">&#xe612; </string> <!--已收藏-->
    <string name="ic_about">&#xe608; </string> <!--关于-->
    <string name="ic_close">&#xe633; </string> <!--关闭的叉-->
    <string name="ic_home">&#xe635; </string> <!--首页-->
    <string name="ic_type">&#xe606; </string> <!--分类-->
    <string name="ic_user">&#xe652; </string> <!--用户-->
    <string name="ic_more">&#xe66f; </string> <!--更多-->
    <string name="ic_refresh">&#xe600; </string> <!--刷新-->
    <string name="ic_right">&#xe609; </string> <!--右箭头-->
    <string name="ic_call">&#xe626; </string> <!--电话图标-->
    <string name="ic_rocket">&#xe68d; </string> <!--小火箭图标-->
    <string name="ic_trash">&#xef32; </string> <!--垃圾桶图标-->
    <string name="ic_plus">&#xe601; </string> <!--加号-->
    <string name="ic_android">&#xe62a; </string> <!--加号-->
    <string name="ic_express">&#xe644; </string> <!--加号-->

    <string name="action_share">分享</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_link_success">已复制链接</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sample_device_admin">超级设备管理器</string>
    <string name="sample_device_admin_description">超级设备管理器:一键锁屏，清除数据</string>

</resources>
