<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_top_wan_android"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            
            <cn.foxconn.matthew.myapp.wanandroid.widget.FontTextView
                android:id="@+id/ft_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_home"
                android:textSize="20sp"
                android:textColor="@color/main"/>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="首页"
                android:textColor="@color/main"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <cn.foxconn.matthew.myapp.wanandroid.widget.FontTextView
                android:id="@+id/ft_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_type"
                android:textSize="20sp"
                android:textColor="@color/main"/>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="分类"
                android:textColor="@color/main"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <cn.foxconn.matthew.myapp.wanandroid.widget.FontTextView
                android:id="@+id/ft_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_user"
                android:textSize="20sp"
                android:textColor="@color/main"/>

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="个人"
                android:textColor="@color/main"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>